Kavita theme, jumpBar fixes

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: calc((var(--vh) *100) - 4.5rem);
+    height: 85vh;
+    margin-bottom: 0.5rem;
 }
 
 .content-container {
@@ -10,7 +11,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0.5rem;
 }
 
 .card-container {
@@ -40,11 +41,11 @@
     display: flex;
     flex-flow: column;
     flex-shrink: 0;
-    font-size: 0.75rem;
-    overflow: hidden;
+    font-size: 0.5rem;
     padding: 0 1rem;
     align-items: center;
-    justify-content: space-around;
+    justify-content: end;
+    height: 95%;
 
     @media (max-width: 576px) {
         padding: 0 10px 0 5px;
